--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -1283,6 +1283,15 @@ keywords = "Hydraulic properties "
  note =      { Available for free at http://cs.gmu.edu/$\sim$sean/book/metaheuristics/ }
 }
 
+@book{pum,
+ author =    { Rektorys, K. and Cipra, T. and Drabek, K. and  Fiedler, M. and Fuka, J. and Kejla, F. and Kepr, B. and Nevas, J. and Nozicka, F. and Prager, M. and Segeth, K. and Vilhelm, V. and Vitasek, E. and Zelenka, M.  },
+ title =     { Overview of Applied Mathematics I, II },
+ year =      { 2000 },
+ publisher = { Prometheus, Prague }
+}
+
+
+
 @article{Storn97,
  author={Storn, Rainer and Price, Kenneth},
  year={1997},
@@ -1615,7 +1624,7 @@ author = "Buckingham, Edgar",
   
     @Manual{t3d,
     title = {T3D Mesh Generator},
-    author = {{Rypl, Daniel}},
+    author = {Rypl, Daniel},
     organization = {Department of Mechanics, CTU in Prague, Czech Republic},
     address = {Prague, Czech Republic},
     year = {2004},
