changed optimization part

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -1,3 +1,14 @@
+@ARTICLE{Kuraz:2010:JCAM,
+	AUTHOR =       {Kur\'a\v{z}, M. and Mayer, P. and Lep\v{s}, M. and Trpko\v{s}ov\'a, D.},
+	TITLE =        {An adaptive time discretization of the classical and the dual porosity model of {R}ichards' equation},
+	JOURNAL =      {Journal of Computational and Applied Mathematics},
+	YEAR =         {2010},
+	volume =       {233},
+	pages =        {3167--3177},
+	note =         {ISSN: 0377-0427},
+	source =       {doi:10.1016/j.cam.2009.11.056},
+}
+
 @article{Hrstka,
 	title = "Improvements of real coded genetic algorithms based on differential operators preventing premature convergence",
 	journal = "Advances in Engineering Software",
