--- a/version2.tex
+++ b/version2.tex
@@ -87,7 +87,7 @@ The main purpose of this inverse analysis was to evaluate the SHP parameterized 
 The SHP of the topsoil layer are very difficult to measure directly, since the thickness of the top soil layer is often much smaller than the depth required to embed the SR or Guelph permeameter device or to obtain undisturbed samples for further laboratory experiments.
 
 
-We investigated the question whether is it possible to characterize the unsteady part of the SR infiltration experiment with a unique set of parameters representing  SHP, and whether all parameters are vulnerable to non-uniqueness. To evaluate non-uniqueness, local optima were identified and mapped using the simplified atavistic differential evolution algorithm \citep{Hrstka,grade}.   
+We investigated the question whether is it possible to characterize the unsteady part of the SR infiltration experiment with a unique set of parameters representing  SHP, and whether all parameters are vulnerable to non-uniqueness. To evaluate non-uniqueness, local optima were identified and mapped using a modified genetic algorithm with niching.   
 
 We also discuss important issues regarding (i) the design of the numerical simulations, (ii) the influence of spatial and temporal discretization on the identified local optima and (iii) convergence issues with the nonlinear operator. 
 \end{abstract}
@@ -509,11 +509,13 @@ The following sections will further explain the definition of the objective func
 
 
 
-\subsection{Parameter identification, a definition of the objective function} %[michal]
+\subsection{Optimization}
+
+\subsubsection{Parameter identification, a definition of the objective function} %[michal]
 \label{objdef}
 
 The soil hydraulic parameters (SHP) of the top soil that will be identified were specified in section~\ref{shp}.
-Since the parameters will be identified using a stochastic method, we have to introduce a physically reasonable range for each parameter. The ranges for the SHPs are specified in table~\ref{rozsahy}.
+Since the parameters will be identified using a stochastic method, we have to introduce a physically reasonable range for each parameter. The ranges for the SHP are specified in table~\ref{rozsahy}.
 
 \begin{table}[ht]
 \begin{center}
@@ -564,29 +566,38 @@ where $T_{end}$ is the final simulation time [$T$], which is indeed the root mea
 
 
 \end{enumerate}
-And so we have applied here a multi-objective optimization. However, it is apparent that minimizing the objective function~\eqref{objektiva1} also minimizes the objective functions~\eqref{objektiva2} and  \eqref{objektiva3}. The aim of this multi-objective definition was improving the conditioning of this inverse problem. If we considered the objective function~\eqref{objektiva1} only, then we were probably able to obtain the same solution as with this multi-objective definition with slower convergence of optimization procedure only (the selection of the optimization algorithm will be explained in the following section~\ref{optima}). This multi-objective function definition is based on experience from our previous attempts in inverse analyses of this infiltration problem.
+We conducted multi-objective optimization. However, it is apparent that minimizing the objective function~\eqref{objektiva1} also minimizes the objective functions~\eqref{objektiva2} and \eqref{objektiva3}. The aim of this multi-objective definition was to improve the conditioning of this inverse problem. If we only considered the objective function~\eqref{objektiva1}, then we were probably able to obtain the same solution as with this multi-objective definition with slower convergence of optimization procedure only (the selection of the optimization algorithm will be explained in the following section~\ref{optima}). This multi-objective function definition is based on our experience from previous attempts of inverse analysis of this infiltration problem.
 
 
 
-\subsubsection{Optimization method}%[matej]
+\subsubsection{Optimization algorithm}%[matej]
 \label{optima}
 
-The most traditional way of dealing of multiple objectives in optimization is the Weighted Sum Method (WSF). Each objective out of $kk$ objectives $f_i(\vec{x})$ is multiplied by user defined weights $w_i$ and their sum is optimized. The problem is converted into single criteria optimization:
-%
-\begin{lineq}\label{MO}
-    F(\vec{x}) = \sum_{i=1}^{kk} w_i f_i(\vec{x}) , \quad\quad \sum_{i=1}^{kk} w_i = 1, \quad w_i \ge 0 ,
-\end{lineq}
-and any single-objective optimization method can be used to solve~\eqref{MO}. Although this method is really easy and intuitive, the biggest obstacle is in setting the weights. The weights express the relative importance of individual objectives, which, in real world applications, is difficult to determine. The success of the WSM depends also on scaling of objectives; all of them should have more or less the same order of magnitude to affect the value of $F(\vec{x})$ similarly. Therefore, not only weight vector must be set, but also a~normalization of objectives must be performed. Similarly to weight vector, it is difficult to determine in advance which objectives' values can be reached and accordingly, to properly set the normalization vector.
+In this contribution we used the modified genetic algorithm GRADE \citep{grade,Kucerova:2007:PHD} supported by niching method CERAF \citep{Hrstka} enhancing the algorithm with
+memory and restarts. GRADE is a real-coded genetic algorithm combining the ideas of genetic operators: cross-over, mutation and selection taken from the standard genetic algorithm and differential operators taken from differential evolution. When GRADE converges, the current position of the optimization algorithm is marked as a local extreme and a forbidden area is built around it in order to forbid the optimization algorithm to fall into the same local extreme again. The main setting of the optimization procedure was as follows: the population of the genetic algorithm contains 30 independent solutions, the whole identification stops after 20.000 objective function evaluations and a local extreme was marker after 600 evaluations without any improvement.
 
-It seems to be advantageous to use population-based Evolutionary Algorithms to obtain the Pareto set for general multi-objective optimization problem.
 
-In this contribution, a genetic algorithm called GRADE \citep{grade,Kucerova:2007:PHD} was applied. It is a real-coded genetic algorithm combining the ideas of genetic operators: cross-over, mutation and selection taken from the
-standard genetic algorithm and the idea of differential operator taken from the differential evolution.
-Moreover, the algorithm GRADE is supported with the niching method
-CERAF, which was developed based on an idea of enhancing the algorithm with
-memory and restarts~\citep{ceraf}. When the GRADE algorithm loses the convergence, the current position of the optimization algorithm is marked as a local extreme and a forbidden area is build around in order to forbid the optimization algorithm again to fall into the same local extreme. Hence all inspected local extremes are stored in memory and can be inspected after the optimization. 
+\subsubsection{Multi-objective Optimization}
 
-The main setting of the optimization procedure was as follows: the population of the genetic algorithm contains 30 independent solutions, the whole identification stops after 20.000 objective function evaluations and a local extreme was marker after 600 evaluations without any improvement.
+ In this contribution Average Ranking (AR) \citep{Leps:2007} was used to deal with multi-objective definition. It sums ranks of the objective functions instead of the objective functions' values. Therefore, no weights are needed, however, the Pareto-dominance is not preserved as described in \cite{vitingerova:2010}. An application of the AR algorithm to parameters identification can be found in \cite{Kuraz:2010:JCAM}.
+
+%Although popular Genetic Algorithm are famous for their robustness against multi-modality, their ability to find many local optima is limited by the size of the population. Therefore, current contribution offers an application of genetic algorithm called GRADE \cite{Ibrahimbegovic:2004,Kucerova:2007:PHD} supported by niching method CERAF \cite{Hrstka:2004:AES} that stores all found local optima in independent memory. Moreover, the optimization algorithm is guided away from already known places thus allowing to locate many unvisited but interesting areas.
+
+%The most traditional way of dealing with multiple objectives in optimization is the Weighted Sum Method (WSF). Each objective out of $kk$ objectives $f_i(\vec{x})$ is multiplied by user defined weights $w_i$ and their sum is optimized. The problem is converted into single criteria optimization:
+%%
+%\begin{lineq}\label{MO}
+%    F(\vec{x}) = \sum_{i=1}^{kk} w_i f_i(\vec{x}) , \quad\quad \sum_{i=1}^{kk} w_i = 1, \quad w_i \ge 0 ,
+%\end{lineq}
+%and any single-objective optimization method can be used to solve~\eqref{MO}. Although this method is easy and intuitive, setting the weights is challenging. The weights express the relative importance of individual objectives, which, in real world applications, is difficult to determine. The success of the WSM depends also on scaling of objectives; all of them should have more or less the same order of magnitude to affect the value of $F(\vec{x})$ similarly. Therefore, not only weight vector must be set, but also a~normalization of objectives must be performed. Similarly to weight vector, it is difficult to determine in advance which objectives' values can be reached and accordingly, to properly set the normalization vector.
+%Instead of using WSM
+%It seems to be advantageous to use population-based Evolutionary Algorithms to obtain the Pareto set for general multi-objective optimization problem.
+
+%In this contribution, a genetic algorithm called GRADE \citep{grade,Kucerova:2007:PHD} was applied. It is a real-coded genetic algorithm combining the ideas of genetic operators: cross-over, mutation and selection taken from the
+%standard genetic algorithm and the idea of differential operator taken from the differential evolution.
+%Moreover, the algorithm GRADE is supported with the niching method
+%CERAF, which was developed based on an idea of enhancing the algorithm with
+%memory and restarts~\citep{ceraf}. When the GRADE algorithm loses the convergence, the current position of the optimization algorithm is marked as a local extreme and a forbidden area is build around in order to forbid the optimization algorithm again to fall into the same local extreme. Hence all inspected local extremes are stored in memory and can be inspected after the optimization. 
+
 
 
 \section{Results and discussion} %[michal, lukas]
