--- a/version2.tex
+++ b/version2.tex
@@ -198,7 +198,7 @@ are given in the table~\ref{tab:soiltxt}.\todo{I don't get the percentage, I wou
 
  \begin{table}[ht]
  	\begin{center}
- 		\caption{Fractions of the fine soil (< 2 mm) and skeleton (> 2 mm) and bulk density of the E and Bhs+Bs horizons.}
+ 		\caption{Fractions of the fine soil ($<$ 2 mm) and skeleton ($>$ 2 mm) and bulk density of the E and Bhs+Bs horizons.}
  		\begin{small}
  			\doublespacing
  			\begin{tabular}{l c  c  c  c  c}
@@ -227,7 +227,7 @@ are given in the table~\ref{tab:soiltxt}.\todo{I don't get the percentage, I wou
 
 
 \subsubsection{Obtaining SHP parameters for lower horizons}
-\label{dolni}
+\label{shp}
 
 Guelph permeameter measurements (GP) were used to estimate the saturated hydraulic conductivity of the lower horizons. The constant head GP method applied here is described in~\citep{Jacka1}.
 It is well known that pedotransfer functions work well for spodic and eluvial horizons characterized by high percentage of sand, without a distinct structure, and with a bulk density and porosity corresponding to a standard mineral soil. Parameters representing the retention curves for spodic horizons and eluvial horizon below the top-soil were estimated using the soil texture and the bulk density information with pedotransfer function implemented in Rosetta code~\citep{Schaap}.
@@ -290,13 +290,12 @@ of one-dimensional infiltration exhibited an excellent fitting quality, with a m
 I(t)=\frac{c_0\left(1-\exp\left(-c_1\sqrt{t}\right)\right)}{c_1}+c_2t,
 \label{vyhlaz}
 \end{lineq}
-where $I$ is the cumulative infiltration [$L$], and where the parameter set $c_{0,1,2}$, is usually expressed in terms of SHP. This physically based interpretation of the Swartzendruber parameters was disregarded, since our infiltration model does not meet the prerequisites for the Swartzendruber model. The Swartzendruber model was considered here as an exponential smoothing and extrapolating function only.
+where $I$ is the cumulative infiltration [$L$], and where the parameter set $c_{0,1,2}$, is usually expressed in terms of SHP. This physically based interpretation of the Swartzendruber parameters was disregarded, since our infiltration model does not meet the prerequisites for the Swartzendruber model. The Swartzendruber model was considered here as an exponential smoothing and interpolating function only.
 
 
-%According to the normality tests,  all three datasets of $c_{0,1,2}$ parameters can be well approximated  using a log-normal distribution.
- %The geometric mean is therefore suitable for estimating representative values of these parameters.\todo{does the log-normal distribution implies application of the goemetric mean? %yes} 
+
  
-Statistical description of the Swartzendruber parameters and evaluation of the fitting quality of Swartzendruber model is given in~\citep{jacka-site}, see datasets collected on site 3. Representative mean values are as follows: $c_0 = 8.55\times 10^{-4}$~m.s$^{-0.5}$, $c_1 = 1.13 \times 10^{-1}$~[-], and $c_2 = 5.16\times 10^{-6}$~m.s$^{-1}$. The evaluated representative  parameter set, together with the model~\eqref{vyhlaz}, will be used as an input curve for identifying the top soil's SHP. SHP of the lower horizons were already estimated from direct measurements as described in the previous section~\ref{dolni}.
+Statistical description of the Swartzendruber parameters and evaluation of the fitting quality of Swartzendruber model is given in~\citep{jacka-site}, see datasets collected on site 3. Representative mean values are as follows: $c_0 = 8.55\times 10^{-4}$~m.s$^{-0.5}$, $c_1 = 1.13 \times 10^{-1}$~[-], and $c_2 = 5.16\times 10^{-6}$~m.s$^{-1}$. The evaluated representative  parameter set, together with the model~\eqref{vyhlaz}, will be used as an input curve for identifying the top soil's SHP. SHP of the lower horizons were already estimated from direct measurements as described in the previous section~\ref{shp}.
 
 It is already apparent at this stage, that if the infiltration experiment can be well approximated by a three parametric model~\eqref{vyhlaz}, then the five parametric SHP representation potentially leads to over-parameterization and makes the model non-identifiable \citep{bellman1970}.  
 
@@ -365,16 +364,16 @@ It is apparent that the wetting front originating from our infiltration experime
 \begin{lineq}
 \frac{\partial h}{\partial \vec{n}}(x) = 0, \quad \forall (x,t) \in \Gamma_{\mbox{\footnotesize free drainage}} \times [0,T).
 \end{lineq}
-is in a conflict with the initial condition (since the outer normal vector $\vec{n} = \left(\begin{smallmatrix} &0 \\ -&1 \end{smallmatrix} \right)$), which is again physically incorrect, and produces further computational costs. The reason for the extra computational costs is that the nonlinear equation solver (in this case Picard method) together with the iterative linear equation solver (in this case preconditioned conjugate gradient method)  treats iteration increments for the bottom boundary, which is in an ideal case out of the reach of the infiltration experiment. The computational process, that is produced at the bottom boundary in the beginning of the simulation with such boundary setup, originates from the initial and boundary condition mismatch, and has no physical meaning.
+is in a conflict with the initial condition (since the outer normal vector $\vec{n} = \left(\begin{smallmatrix} &0 \\ -&1 \end{smallmatrix} \right)$), which is again physically incorrect, and produces extra computational costs.  The computational process, that is produced at the bottom boundary in the beginning of the simulation with such boundary setup, originates from the initial and boundary condition mismatch, and has no physical meaning.
 
 It turns out that the only physically correct boundary condition for the bottom boundary is either the Neumann no-flow boundary or Dirichlet boundary both at the groundwater table. The average depth of the groundwater table was known, it is approximately -280~cm below the surface. With this particular setup the domain became extremely narrow and deep, see figure~\ref{valecbc}.
-%^konec pred obedem
+
 
 \subsubsection{Stability restrictions of convection dominant problems}
 \label{restrconvect}
 
-The term \eqref{convect} is the first order derivative term, and so the well known stability restrictions for the numerical solutions of the convection-diffusion problems appear here~\cite{zienkiewicz1976}.
-The Peclet number representing the numerical stability of convection-diffusion problems is in general given by~\cite{knobloch2008}
+The equation \eqref{convect} refers to coefficient  of the first order derivative term in~\eqref{richaxi}, and so the well known stability restrictions for the numerical solutions of the convection-diffusion problems appear here~\cite{zienkiewicz1976}.
+The Peclet number representing the numerical stability of convection-diffusion problems is defined as~\citep{knobloch2008} 
 \begin{lineq}
 \label{peclet-std}
 Pe = \frac{c \Delta x}{2 D},
@@ -383,23 +382,22 @@ where $c$ is the convection coefficient defined in~\eqref{convect}, $\Delta x$ i
 \begin{lineq}
 Pe =  \frac{\frac{1}{r}K(h) \Delta x}{2K(h)} = \frac{\Delta x}{2r}.
 \end{lineq}
-Since our mesh is triangular, $\Delta x$ can be roughly assumed to be the greatest triangle altitude (since we assume some mesh quality properties). Then a sufficient distance from the axis of anisotropy is such that the Peclet number is sufficiently low. If we want to make our computation free of the well known spurious oscillations~\cite{zienkiewicz1976, roos-layers}, a sufficiently low Peclet number $Pe\le 1$ si required. Therefore, the distance from the axis of anisotropy is given by the domain discretization step at the left hand side boundary. The selected discretization step at the left hand side boundary was assumed as $\Delta x=2$~cm. The domain was therefore detached by 2~cm from the axis of anisotropy, and thus the Peclet number was 0.5 only.
+Since our mesh is triangular, $\Delta x$ can be roughly assumed to be the greatest triangle altitude (since we assume some mesh quality properties). Then a sufficient distance from the axis of anisotropy is such that the Peclet number is sufficiently low. If we want to make our computation free of the well known spurious oscillations~\cite{zienkiewicz1976, roos-layers}, a sufficiently low Peclet number $Pe\le 1$ is required. Therefore, the distance from the axis of anisotropy is given by the domain discretization step at the left hand side boundary. The selected discretization step at the left hand side boundary was assumed as $\Delta x=2$~cm. The domain was therefore detached by 2~cm from the axis of anisotropy, and thus the Peclet number was 0.5 only.
 
 
 \subsubsection{Domain shape restrictions}
 
 Since \cite{Dusek} mentioned several difficulties with incorrect triangular mesh setup while modeling the SR experiment, we tried to avoid possible numerical issues connected with domains with sharp spikes.
 
-The governing equation~\eqref{richaxi} will be solved here by linear finite element method, which is a subset of variational methods. Using standard setup the solution $H$ of~\eqref{richaxi} will be taken from Sobolev functional space defined for functions on Lipschitz bounded domains~\citep{braess, pum}.
+% The governing equation~\eqref{richaxi} will be solved here by linear finite element method, which is a subset of variational methods. Using standard setup the solution $H$ of~\eqref{richaxi} will be taken from Sobolev functional space defined for functions on Lipschitz bounded domains~\citep{braess, pum}.
 
 %reseni rovnice bylo ve std pojeti, reseni ze sobolevova prostoru funkci definovanych na oblasti z lips hranici
-
-
-In order to avoid the non-Lipschitz boundary (or any boundary with a shape that is close to the non-Lipschitz boundary) the infiltration ring thickness was oversized  to 2.5~cm. It is obvious that the real ring thickness is much smaller (in our case 2~mm), but using the real ring thickness yields possible numerical issues, since then the domain becomes a typical case of a non-Lipschitz bounded domain~\cite{braess}.  It is  expected, that oversizing the ring thickness does not significantly affect the solution at the top Dirichlet boundary. 
+It is well known, that sudden changes in domain shapes, spikes and discontinuities yield numerical difficulties (e.g. the Lipschitz boundary restrictions~\citep{braess}).
+In order to avoid computational difficulties during the automatic calibration procedure the infiltration ring thickness was oversized  to 2.5~cm. It is obvious that the real ring thickness is much smaller (in our case 2~mm), but using the real ring thickness yields possible numerical issues.  It is expected, that oversizing the ring thickness does not significantly affect the fluxes through the top Dirichlet boundary, which is the only important part of the solution of~\eqref{richaxi} for our calibration process.
 
 \subsubsection{Initial and boundary condition setup}
 
-As discussed in \ref{restconvect} the left hand side boundary was located at $r=2$~cm. The right hand side boundary was located at a distance $r=73$~cm, it means 50~cm from the infiltration ring. 
+As discussed in \ref{restrconvect} the left hand side boundary was located at $r=2$~cm. The right hand side boundary was located at a distance $r=73$~cm, it means 60~cm from the infiltration ring. 
 
  \begin{figure}
 \centering
@@ -410,7 +408,7 @@ As discussed in \ref{restconvect} the left hand side boundary was located at $r=
 \end{figure}
 
 
-The locations of the domain boundaries are depicted in figure~\ref{valecbc}. The boundary conditions are specified as follows
+The locations of the domain boundaries are depicted in figure~\ref{valecbc}. The boundary conditions are specified as follows (with the reference level $z=0$ located at the top boundary)
 \begin{lineq} 
 \begin{split}
 h(x,t) &= 4 \; \mbox{cm} \Rightarrow H(x,t) = 4 \; \mbox{cm}; \quad \forall (x,t) \in \Gamma_1 \times [0,T), \\
@@ -445,19 +443,19 @@ Equation~\eqref{richaxi} was implemented into the DRUtES library~\citep{drutes}.
 where $k$ denotes the iteration level, and $l$ denotes the time level, until \begin{lineq} \label{picard} ||\vec{x}_l^{k+1} - \vec{x}_l^k||_2 < \varepsilon , \end{lineq} where $\varepsilon$ is the desired iteration criterion. The iterations required for~\eqref{matice} to converge are denoted as the outer iterations. It is apparent that the number of required outer iterations depends on the $\varepsilon$ criterion. 
 
 
-The method~\eqref{matice} degenerates into a kind of semiexplicit approximation if the error criterion $\varepsilon$ was taken from the extended real numbers, $\varepsilon \in {\overline {\mathbb {R} }}$, and assigned as $\varepsilon = + \infty$. This semiexplicit approximation is denoted as
+The method~\eqref{matice} degenerates into a kind of semiexplicit approximation if the error criterion $\varepsilon$ was "infinitely huge" -- it means taken from the extended real numbers, $\varepsilon \in {\overline {\mathbb {R} }}$, and assigned as $\varepsilon = + \infty$. This semiexplicit approximation is denoted as
 \begin{lineq}
 \label{matice2}
 \mathbf{A}(\vec{x}_{l-1}) \vec{x}_l = \vec{b}(\vec{x}_{l-1}).
 \end{lineq}
  This semiexplicit method always requires just a single outer iteration. With a short time step the method converges to the exact solution. For inappropriate time steps, the method diverges from the exact solution faster than the method~\eqref{matice}. Nonetheless, the method~\eqref{matice2} is free of possible issues related to the convergence of the nonlinear operator.
 
-The infiltration flux is obtained from the numerical derivative of the solution of \eqref{richaxi},  and  it is well known that inaccurate approximation of the capacity term (time derivative term) yields inaccurate mass properties~\citep{celia}. We are aware of the possible impact of spatial and temporal discretization on the identified SHP values. We are also aware of possible difficulties with convergence of the linearized discrete system~\eqref{matice} for certain combinations of SHP parameters during the automatic calibration, as discussed in~\cite{beven2003-uncertain}.
+The infiltration flux is obtained from the numerical derivative of the solution of \eqref{richaxi},  and  it is well known that inaccurate approximation of the capacity term (time derivative term) yields inaccurate mass properties~\citep{celia}. We are aware of the possible impact of spatial and temporal discretization on the identified SHP values. We are also aware of possible difficulties with convergence of the linearized discrete system~\eqref{matice} for certain combinations of SHP parameters during the automatic calibration, as discussed by~\cite{beven2003-uncertain}.
 Thus the following methodology for the automatic calibration was proposed here.
 
 
  \begin{enumerate}[label=({\bf \roman*})]
-\item Proceed the calibration procedure with the quasi-explicit stable numerical technique for treating the nonlinear operator explained in equation~\eqref{matice2}, with the initial time step $t_{init}= 10^{-6}$~hrs, and for each subsequent time level $l$, $\Delta t_l = 1.05 \Delta t_{l-1}$, where $l=\{1,n_t\}$, where $n_t$ is the number of time levels used for the temporal discretization. The ranges of parameters for this calibration are given in table~\ref{rozsahy}, so the maximal values of SHP are defined as a vector $\vec{p}_{r_f,max}$, and the minimal values are defined as a vector $\vec{p}_{r_f,min}$. So initially the ranges are extremely broad and exceeding even the physically acceptable values. The spatial discretization for this step of calibration was given in the beginning of this section -- 2097 nodes and 3861 elements. 
+\item Proceed the calibration procedure with the quasi-explicit stable numerical technique for treating the nonlinear operator explained in equation~\eqref{matice2}, with the initial time step $t_{init}= 10^{-6}$~hrs (note that all real numbers are represented with double precision in our implementations), and for each subsequent time level $l$, $\Delta t_l = 1.05 \Delta t_{l-1}$, where $l=\{1,n_t\}$, where $n_t$ is the number of time levels used for the temporal discretization. The ranges of parameters for this calibration are given in table~\ref{rozsahy}, so the maximal values of SHP are defined as a vector $\vec{p}_{r_f,max}$, and the minimal values are defined as a vector $\vec{p}_{r_f,min}$. So initially the ranges are extremely broad and exceeding even the physically acceptable values. The spatial discretization for this step of calibration was given in the beginning of this section -- 2097 nodes and 3861 elements. 
 Let us assume that this discretization is given by a mesh density function ${\Delta}(\vec{x})^{r_f}$. The function $\Delta(\vec{x})^{r_f}$ is understood as a spatial distribution of mesh size density, which was used as an input for the mesh generator T3D~\citep{t3d}. The superscript $r_f$ defines the refinement level, where $r_f=0$ at this initial stage, and the vector $\vec{x}$ refers to spatial coordinates inside the domain $\Omega$.
 \item Let us pressume that this inverse model will have more than just a single solution. \begin{itemize} \item Then this calibration will generate vectors of SHP values $\vec{p}^{i_e}_{r_f}$, where the superscript $i_e=\{1,...,n_e\}$, where $n_e$     denotes the number of  local extremes. \end{itemize} 
 \item To validate the inverse modeling results, select physically acceptable local extremes with good fitting qualities, and create a scatter plot of the objective function in the local extreme  neighborhood  with improved temporal integration and spatial discretization. For each $\vec{p}^{i_e}_{r_f}$ from the acceptable solutions the neighborhood is defined as
@@ -496,13 +494,13 @@ If $r_f > 0$, then the nonlinear problem represented now by~\eqref{matice} will 
   \end{enumerate}
 \end{enumerate}
 
-In the second stage the unknown SHP parameters will be reduced and the automatic calibration using the initial mesh together with the simple quasi-explicit approximation~\eqref{matice2} will proceed.
-The unknown SHP parameters will be sequentially reduced in the following order until just a single extreme will be identified.
-\begin{enumerate}[label=({\bf \Roman*})]
-\item $S_s$ -- specific storage is often neglected for the unsaturated zone, and thus for the first unknown parameter reduction will be assigned $S_s=0\;\mbox{m}^{-1}$
-\item $\theta_s$ -- water content is often easy to measure directly, despite there are no available data for top soil layer, let's presume $\theta_s = 0.6.$
-\item $K_s$ -- if the identifiability of the inverse model will require also reduction of $K_s$, then this inverse task became inappropriate for any further analyses, and the conducted SR measurements will be declared as non-identifiable setup for SHP parameters.
-\end{enumerate}
+% In the second stage the unknown SHP parameters will be reduced and the automatic calibration using the initial mesh together with the simple quasi-explicit approximation~\eqref{matice2} will proceed.
+% The unknown SHP parameters will be sequentially reduced in the following order until just a single extreme will be identified.
+% \begin{enumerate}[label=({\bf \Roman*})]
+% \item $S_s$ -- specific storage is often neglected for the unsaturated zone, and thus for the first unknown parameter reduction will be assigned $S_s=0\;\mbox{m}^{-1}$
+% \item $\theta_s$ -- water content is often easy to measure directly, despite there are no available data for top soil layer, let's presume $\theta_s = 0.6.$
+% \item $K_s$ -- if the identifiability of the inverse model will require also reduction of $K_s$, then this inverse task became inappropriate for any further analyses, and the conducted SR measurements will be declared as non-identifiable setup for SHP parameters.
+% \end{enumerate}
 
 
 The following sections will further explain the definition of the objective function and the parameter identification algorithm.
@@ -581,47 +579,40 @@ memory and restarts. GRADE is a real-coded genetic algorithm combining the ideas
 
  In this contribution Average Ranking (AR) \citep{Leps:2007} was used to deal with multi-objective definition. It sums ranks of the objective functions instead of the objective functions' values. Therefore, no weights are needed, however, the Pareto-dominance is not preserved as described in \cite{vitingerova:2010}. An application of the AR algorithm to parameters identification can be found in \cite{Kuraz:2010:JCAM}.
 
-%Although popular Genetic Algorithm are famous for their robustness against multi-modality, their ability to find many local optima is limited by the size of the population. Therefore, current contribution offers an application of genetic algorithm called GRADE \cite{Ibrahimbegovic:2004,Kucerova:2007:PHD} supported by niching method CERAF \cite{Hrstka:2004:AES} that stores all found local optima in independent memory. Moreover, the optimization algorithm is guided away from already known places thus allowing to locate many unvisited but interesting areas.
-
-%The most traditional way of dealing with multiple objectives in optimization is the Weighted Sum Method (WSF). Each objective out of $kk$ objectives $f_i(\vec{x})$ is multiplied by user defined weights $w_i$ and their sum is optimized. The problem is converted into single criteria optimization:
-%%
-%\begin{lineq}\label{MO}
-%    F(\vec{x}) = \sum_{i=1}^{kk} w_i f_i(\vec{x}) , \quad\quad \sum_{i=1}^{kk} w_i = 1, \quad w_i \ge 0 ,
-%\end{lineq}
-%and any single-objective optimization method can be used to solve~\eqref{MO}. Although this method is easy and intuitive, setting the weights is challenging. The weights express the relative importance of individual objectives, which, in real world applications, is difficult to determine. The success of the WSM depends also on scaling of objectives; all of them should have more or less the same order of magnitude to affect the value of $F(\vec{x})$ similarly. Therefore, not only weight vector must be set, but also a~normalization of objectives must be performed. Similarly to weight vector, it is difficult to determine in advance which objectives' values can be reached and accordingly, to properly set the normalization vector.
-%Instead of using WSM
-%It seems to be advantageous to use population-based Evolutionary Algorithms to obtain the Pareto set for general multi-objective optimization problem.
-
-%In this contribution, a genetic algorithm called GRADE \citep{grade,Kucerova:2007:PHD} was applied. It is a real-coded genetic algorithm combining the ideas of genetic operators: cross-over, mutation and selection taken from the
-%standard genetic algorithm and the idea of differential operator taken from the differential evolution.
-%Moreover, the algorithm GRADE is supported with the niching method
-%CERAF, which was developed based on an idea of enhancing the algorithm with
-%memory and restarts~\citep{ceraf}. When the GRADE algorithm loses the convergence, the current position of the optimization algorithm is marked as a local extreme and a forbidden area is build around in order to forbid the optimization algorithm again to fall into the same local extreme. Hence all inspected local extremes are stored in memory and can be inspected after the optimization. 
 
 
 
 \section{Results and discussion} %[michal, lukas]
 
 
-% The first step in parameter identification should always be the sensitivity analyses in order to evaluate the sensitivity of the given objective functions~\eqref{objektiva1} -- \eqref{objektiva3} for the searched parameter set. The sensitivity analyses was conducted for the given SHPs ranges (see table \ref{rozsahy}). In total 10.000 samples of the objective function \eqref{objektiva1} ($L_2$ norm of the model error) were evaluated, in order to obtain the  Total Sobol Index for each parameter, see e.g.~\citep{kniha-citlivost}. The values of the Total Sobol Indices are given in table~\ref{citlivost}. Since the evaluated Total Sobol Index for each parameter was nearly 0.9, our model exhibits an excellent sensitivity for all SHPs parameters.
-% 
-% \begin{table}[ht]
-% \begin{center}
-% \caption{Total Sobol indices for the searched SHPs parameters.}
-% \begin{small}
-% \doublespacing
-% \begin{tabular}{l||c c c c c}
-% \toprule
-% % Ranges of depths, horizon(s)&\multicolumn{4}{c}{Input values for inverse modelling}\\ \cline{2-5}
-% parameter & $\alpha$ & $n$ & $K_s$ & $\theta_s$ & $S_s$ \\ \hline
-% \toprule
-% Total Sobol Index & 0.850 & 0.921 & 0.876 & 0.868 & 0.884 \\
-% \toprule
-% \end{tabular}
-% \end{small}
-% \label{citlivost}
-% \end{center}
-% \end{table}
+\begin{itemize}
+\item First of all - global sensitivity analyses. The sensitivity analyses was conducted for the objective function~\eqref{objektiva1} only.  In total 10.000 samples of the objective function \eqref{objektiva1} ($L_2$ norm of the model error) were evaluated, in order to obtain the  Total Sobol Index for each parameter~\citep{kniha-citlivost}. The values of the Total Sobol Indices are given in table~\ref{citlivost}. Since the evaluated Total Sobol Index for each parameter was nearly 0.9, our model exhibits an excellent sensitivity for all SHPs parameters. 
+
+
+
+\begin{table}[ht]
+\begin{center}
+\caption{Total Sobol indices for the searched SHPs parameters.}
+\begin{small}
+\doublespacing
+\begin{tabular}{l||c c c c c}
+\toprule
+% Ranges of depths, horizon(s)&\multicolumn{4}{c}{Input values for inverse modelling}\\ \cline{2-5}
+parameter & $\alpha$ & $n$ & $K_s$ & $\theta_s$ & $S_s$ \\ \hline
+\toprule
+Total Sobol Index & 0.850 & 0.921 & 0.876 & 0.868 & 0.884 \\
+\toprule
+\end{tabular}
+\end{small}
+\label{citlivost}
+\end{center}
+\end{table}
+
+
+\item the first run for $r_l$=0 generated
+
+\end{itemize}
+
 % 
 % As stated in the section~\ref{trapoty} SHPs parameters were initially searched in the wide intervals defined in table~\ref{rozsahy} with the less accurate numerical technique~\eqref{matice2}. Since the proposed parameter search algorithm handles an ability for identification of  local extremes we could perform a test of multimodality. 
 % There were in total 33 points on Pareto front identified. The identified Pareto front was non-convex. 
