--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -1,3 +1,217 @@
+
+
+@article{pena17,
+	author = {C. Peña-Sancho and T.A. Ghezzehei and B. Latorre and C. González-Cebollada and D. Moret-Fernández},
+	title = {Upward infiltration–evaporation method to estimate soil hydraulic properties},
+	journal = {Hydrological Sciences Journal},
+	volume = {62},
+	number = {10},
+	pages = {1683-1693},
+	year  = {2017},
+	publisher = {Taylor & Francis},
+	doi = {10.1080/02626667.2017.1343476},
+	
+	URL = { 
+	https://doi.org/10.1080/02626667.2017.1343476
+	
+	},
+	eprint = { 
+	https://doi.org/10.1080/02626667.2017.1343476
+	
+	}
+	
+}
+
+
+
+@article{ Kowalsky04,
+	Author = {Kowalsky, MB and Finsterle, S and Rubin, Y},
+	Title = {{Estimating flow parameter distributions using ground-penetrating radar
+	and hydrological measurements during transient flow in the vadose zone}},
+	Journal = {{ADVANCES IN WATER RESOURCES}},
+	Year = {{2004}},
+	Volume = {{27}},
+	Number = {{6}},
+	Pages = {{583-599}},
+	Month = {{JUN}},
+	Abstract = {{Methods for estimating the parameter distributions necessary for
+	modeling fluid flow and contaminant transport in the shallow subsurface
+	are in great demand. Soil properties such as permeability, porosity, and
+	water retention are typically estimated through the inversion of
+	hydrological data (e.g., measurements of capillary pressure and water
+	saturation). However, ill-posedness and nonuniqueness commonly arise in
+	such non-linear inverse problems making their solutions elusive.
+	Incorporating additional types of data, such as from geophysical
+	methods, may greatly improve the success of inverse modeling. In
+	particular, ground-penetrating radar (GPR) methods have proven sensitive
+	to subsurface fluid flow processes and appear promising for such
+	applications. In the present work, an inverse technique is presented
+	which allows for the estimation of flow parameter distributions and the
+	prediction of flow phenomena using GPR and hydrological measurements
+	collected during a transient flow experiment. Specifically, concepts
+	from the pilot point method were implemented in a maximum a posteriori
+	(MAP) framework to allow for the generation of permeability
+	distributions that are conditional to permeability point measurements,
+	that maintain specified patterns of spatial correlation, and that are
+	consistent with geophysical and hydrological data. The current
+	implementation of the approach allows for additional flow parameters to
+	be estimated concurrently if they are assumed uniform and uncorrelated
+	with the permeability distribution. (The method itself allows for
+	heterogeneity in these parameters to be considered, and it allows for
+	parameters of the petrophysical and semivariogram models to be estimated
+	as well.) Through a synthetic example, performance of the method is
+	evaluated under various conditions, and some conclusions are made
+	regarding the joint use of transient GPR and hydrological measurements
+	in estimating fluid flow parameters in the vadose zone. (C) 2004
+	Published by Elsevier Ltd.}},
+	Publisher = {{ELSEVIER SCI LTD}},
+	Address = {{THE BOULEVARD, LANGFORD LANE, KIDLINGTON, OXFORD OX5 1GB, OXON, ENGLAND}},
+	Type = {{Article}},
+	Language = {{English}},
+	Affiliation = {{Kowalsky, MB (Reprint Author), Univ Calif Berkeley, Lawrence Berkeley Lab, Div Earth Sci, 1 Cyclotron Rd,MS 90-1116, Berkeley, CA 94720 USA.
+	Univ Calif Berkeley, Lawrence Berkeley Lab, Div Earth Sci, Berkeley, CA 94720 USA.}},
+	DOI = {{10.1016/j.advwatres.2004.03.003}},
+	ISSN = {{0309-1708}},
+	Keywords = {{vadose zone; GPR; pilot point; joint inversion; transient data;
+	hydraulic parameters}},
+	Keywords-Plus = {{SOIL HYDRAULIC-PROPERTIES; SIMULATED TRANSMISSIVITY FIELDS; PILOT POINT
+	METHODOLOGY; CROSS-BOREHOLE RADAR; WATER-CONTENT; AUTOMATED CALIBRATION;
+	SPATIAL VARIABILITY; UNSATURATED SOIL; INVERSE PROBLEM; MODEL}},
+	Research-Areas = {{Water Resources}},
+	Web-of-Science-Categories  = {{Water Resources}},
+	Author-Email = {{mbkowalsky@lbl.gov
+	safinsterle@lbl.gov
+	rubin@ce.berkeley.edu}},
+	ResearcherID-Numbers = {{Finsterle, Stefan/A-8360-2009}},
+	ORCID-Numbers = {{Finsterle, Stefan/0000-0002-4446-9906}},
+	Number-of-Cited-References = {{54}},
+	Times-Cited = {{89}},
+	Usage-Count-Last-180-days = {{0}},
+	Usage-Count-Since-2013 = {{26}},
+	Journal-ISO = {{Adv. Water Resour.}},
+	Doc-Delivery-Number = {{826FH}},
+	Unique-ID = {{ISI:000221814200002}},
+	OA = {{No}},
+	DA = {{2017-12-06}},
+}
+
+
+@article{ Nakhaei,
+	Author = {Nakhaei, Mohammad and Amiri, Vahab},
+	Title = {{ESTIMATING THE UNSATURATED SOIL HYDRAULIC PROPERTIES FROM A
+	REDISTRIBUTION EXPERIMENT: APPLICATION TO SYNTHETIC DATA}},
+	Journal = {{JOURNAL OF POROUS MEDIA}},
+	Year = {{2015}},
+	Volume = {{18}},
+	Number = {{7}},
+	Pages = {{717-729}},
+	Abstract = {{In this study, we used HYDRUS-1D to simulate redistribution of water
+	flow from a wet soil sample on the top into the dry soil sample at the
+	bottom and to estimate soil hydraulic properties by inverse solution.
+	Real-time surface contact tensiometers were assumed to monitor soil
+	pressure head at two depths (one at a depth of 0 cm, located on the wet
+	sample, the other at a depth of 12 cm, located at the bottom of the dry
+	sample) during a 5-hour-long laboratory water redistribution experiment.
+	Soil water retention curve, soil hydraulic parameters (saturated water
+	content theta(s), soil bulk density, saturated hydraulic conductivity
+	K-s), and soil organic matter were assumed as known. The soil hydraulic
+	parameters (empirical shape parameters alpha and n) were estimated from
+	time-varying pressure head measurements and soil water retention data by
+	solving a one-dimensional, inverse water redistribution problem using
+	HYDRUS-1D. The simulated pressure head and soil water retention curve
+	during the redistribution experiment compared favorably with their
+	corresponding observed values. To find answers to the questions of
+	uniqueness, identifiability, and stability of different experimental
+	setups, a numerical example of redistribution was carried out. The
+	uniqueness of the inverse solution was analyzed using numerical
+	experiments to estimate two soil hydraulic parameters (alpha, n) of the
+	Mualemvan Genuchten model. To study the shape of the objective function
+	near its minimum, response surfaces for the estimated parameters were
+	generated. The response surfaces for both cases (with and without error
+	in observations) indicated that the performance of the redistribution
+	experiment is reasonable for inverse parameter estimation.}},
+	Publisher = {{BEGELL HOUSE INC}},
+	Address = {{50 NORTH ST, DANBURY, CT 06810 USA}},
+	Type = {{Article}},
+	Language = {{English}},
+	Affiliation = {{Amiri, V (Reprint Author), Kharazmi Univ, Fac Earth Sci, Tehran, Iran.
+	Nakhaei, Mohammad; Amiri, Vahab, Kharazmi Univ, Fac Earth Sci, Tehran, Iran.}},
+	ISSN = {{1091-028X}},
+	EISSN = {{1934-0508}},
+	Keywords = {{HYDRUS-1D; inverse parameter estimation; redistribution; unsaturated
+	zone}},
+	Keywords-Plus = {{VARIABLY SATURATED FLOW; PARAMETER-ESTIMATION; OUTFLOW EXPERIMENTS;
+	FINITE-DIFFERENCE; CONCEPTUAL-MODEL; INVERSE METHOD; CRUSTED SOILS;
+	WATER; INFILTRATION; TRANSPORT}},
+	Research-Areas = {{Thermodynamics; Engineering; Mechanics}},
+	Web-of-Science-Categories  = {{Thermodynamics; Engineering, Mechanical; Mechanics}},
+	Author-Email = {{vahab.amiri@gmail.com}},
+	Number-of-Cited-References = {{55}},
+	Times-Cited = {{0}},
+	Usage-Count-Last-180-days = {{0}},
+	Usage-Count-Since-2013 = {{12}},
+	Journal-ISO = {{J. Porous Media}},
+	Doc-Delivery-Number = {{CN5DO}},
+	Unique-ID = {{ISI:000358450200006}},
+	OA = {{No}},
+	DA = {{2017-12-06}},
+}
+@article{Kamali,
+	Author = {Kamali, H. R. and Zand-Parsa, Sh.},
+	Title = {{OPTIMIZATION OF A NEW INVERSE METHOD FOR ESTIMATION OF INDIVIDUAL SOIL
+	HYDRAULIC PARAMETERS UNDER FIELD CONDITIONS}},
+	Journal = {{Transactions of the ASABE}},
+	Year = {{2016}},
+	Volume = {{59}},
+	Number = {{5}},
+	Pages = {{1257-1266}},
+	Abstract = {{In this research, the EISHP (Estimation of Individual Soil Hydraulic
+	Parameters) model was developed for estimation of the individual soil
+	hydraulic parameters of van Genuchten's equation (alpha, n, K-s,
+	theta(s), and theta(r)). This model was used to predict soil water
+	content and pressure head at different soil depths by implicitly solving
+	the Richards equation, applying the finite difference method. In this
+	model, the objective function (OF) was computed by summation of squared
+	differences between measured and estimated soil water content and
+	pressure head up to ten days after wetting of soil columns. In the EISHP
+	model, each parameter was optimized separately by achieving the minimum
+	value of OF using the Newton-Raphson method and keeping the remaining
+	parameters constant. The optimized parameter value was then used in
+	optimizing the other parameters. Iteration was continued until the
+	difference between the two computational steps of OF was negligibly
+	small and a unique value had been estimated for each parameter. The main
+	contribution of this research is presentation of a methodology for the
+	optimization of individual parameters, which guarantees the uniqueness
+	of parameter values. In contrast, simultaneous optimization of the
+	entire parameter set would not necessarily lead to unique values.}},
+	Publisher = {{AMER SOC AGRICULTURAL \& BIOLOGICAL ENGINEERS}},
+	Address = {{2950 NILES RD, ST JOSEPH, MI 49085-9659 USA}},
+	Type = {{Article}},
+	Language = {{English}},
+	Affiliation = {{Zand-Parsa, S (Reprint Author), Shiraz Univ, Irrigat Dept, Coll Agr, Shiraz, Iran.
+	Kamali, H. R.; Zand-Parsa, Sh., Shiraz Univ, Irrigat Dept, Coll Agr, Shiraz, Iran.}},
+	DOI = {{10.13031/trans.59.11414}},
+	ISSN = {{2151-0032}},
+	EISSN = {{2151-0040}},
+	Keywords = {{Inverse method; Optimization; Richards equation; Soil water; Soil water
+	content}},
+	Keywords-Plus = {{STEP OUTFLOW EXPERIMENTS; DRAINAGE; MODEL; WATER; CONDUCTIVITY;
+	ALGORITHM; FLOW}},
+	Research-Areas = {{Agriculture}},
+	Web-of-Science-Categories  = {{Agricultural Engineering}},
+	Author-Email = {{zandparsa@yahoo.com}},
+	ORCID-Numbers = {{Zand-Parsa, Shahrokh/0000-0003-2594-8650}},
+	Number-of-Cited-References = {{36}},
+	Times-Cited = {{0}},
+	Usage-Count-Last-180-days = {{2}},
+	Usage-Count-Since-2013 = {{3}},
+	Journal-ISO = {{Trans. ASABE}},
+	Doc-Delivery-Number = {{EJ0VP}},
+	Unique-ID = {{ISI:000392929300023}},
+	OA = {{No}},
+	DA = {{2017-12-06}},
+}
+
 @ARTICLE{Kuraz:2010:JCAM,
 	AUTHOR =       {Kur\'a\v{z}, M. and Mayer, P. and Lep\v{s}, M. and Trpko\v{s}ov\'a, D.},
 	TITLE =        {An adaptive time discretization of the classical and the dual porosity model of {R}ichards' equation},
